Implemented search for events.
